# zhipusdk

./: README.md  pyproject.toml  requirements.txt  test.py
examples/: chatglm6b_example.py  model_api_example.py
zhipusdk/: __init__.py
zhipusdk/model_api/: api.py  chatglm_params.py
zhipusdk/utils/: counter.py  sse_client.py  sse_client_for_130b.py
